edits to discussion

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -109,7 +109,7 @@ E. coli grown on glucose have shown to accumulate acetate (Cite proper reference
 Out of 3919 total acetylations at all 9 time points combined, 3373 (86\%) of them seem to occur at n-term of the protein. A look-up of the amino acid position for n-term acetylations on ID'ed peptides showed that these were the 2nd amino acid in most (quote?) of the cases. {May be add about the signal peptides here}. Also, most of the acetylations seem to occur on serine (2358 out of 3919). Among n-term protein acetylations, 2350 (70\%) happened on serine, 483 (14.3\%) happened on alanine and 260 (7.7\%) were on threonine. These were the top 3 frequent n-term acetylations. A literature search also showed us the same frequently occuring n-term acetylated amino acids in E. coli {cite}.
 
 
-\subsection{\emph{E. coli} Phosphorylations, carboxylations, nitrosylations and other PTMs}
+\subsection{\emph{E. coli} Phosphorylations, carboxylations, and nitrosylations}
 
 Few PTMs in \emph{E. coli} have been shown to be key in previous studies (Cite those studies). In particular, we looked at phosphorylation, carboxylation, nitrosylation and oxidation. First, we looked at the phosphorylations in \emph{E. coli}. Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations seem to be small. This is expected, as the sample is not enriched for phosphorylations. An interesting observation is that there is an increase of the number of phosphorylations from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
 
@@ -155,17 +155,19 @@ To summarize, MODa is useful not only to understand known PTMs very well, but ca
 
 (Add how MODa uses score and other features to calculate the probability?), (Also add how MODa can distribute the hits with the charge state?)
 
-We looked at temporal changes at the post-translational modification level using the \emph{E. coli} REL606 mass-spectrometry based proteomics data. This data is collected under glucose limiting conditions at different phases during exponetial growth to long-stationary phases upto 2 weeks under these conditions. Several interesting distributions of these post-translational modifications were found using this data. First, we show that consistently 30\% of the proteome is modified during all the 9 time points analyzed. Second, we show that n-term protein acetylation goes up from exponential to stationary phases pointing to a likely role of this modification during late stages of the growth. Similar results were found for phosphorylation too. However, oxidative stress seem to go down from exponetial to stationary phases. Nutrient limitation, accumulation of toxic substances and change in pH were supposed to increase the oxidiative stress, however this is compensated by the sulfoxide reductases fixing MetSO back to Met. Finally, the methodology used in the study resulted in identification of few novel modifications.
+We looked at temporal changes of the post-translational modifications in \emph{E. coli} REL606 strain. For this, we used mass-spectrometry based proteomics data. This data is collected under glucose limiting conditions for different phases of the growth i.e., exponetial to long-stationary phases upto 2 weeks under these conditions. For the 9 time points analyzed (3 hours to 2 weeks), several interesting insights into the frequency and the temporal changes of post-translational modifications seen in this analysis. First, we show that consistently 30\% of the proteome is modified at all the 9 time points analyzed. Second, we show that n-term protein acetylation goes up from exponential to stationary phases pointing to a likely role of this modification during late stages of the growth. Similar results were found for phosphorylation, carboxylation too. However, oxidative stress seem to go down from exponetial to stationary phases. Nutrient limitation, accumulation of toxic substances and change in pH were supposed to increase the oxidiative stress, however \emph{E. coli} has a mechanism to protect the cell from oxidative damage using the sulfoxide reductases fixing MetSO back to Met. Finally, the computational techniques used in this study can be used with any mass-spectrometry based proteomics data to identify or characterize novel post-translational modifications.
 
-In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then these were analyzed by mass-spectrometry to identify/characterize peptides, and post-translational modifications associated with the protein. The coverage of PTMs identified is limited because of the mass-spectrometry limitation along with the PTM enrichment protocol. Peptide search algorithms are then run on these mass-spectrometry data sets to identify peptides and PTMs associated with it. However, because of computational limitations, most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search not only reduces the size of the database to search but in some cases shown to reduce false positives (Cite?). However recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a naive based multi-blind spectral alignment algorithm, to look for PTMs in the E. coli dataset. A few studies that used MODa both to look at few PTMs in depth such as \cite{Kimetal2014}, or to look at wider coverage of PTMs such as \cite{Liuetal2013}. Recently, the focus has shifted from identifying peptides/proteins to characterizing PTMs as shown in this recent review article \cite{OlsenMann2013}. The advantage of the present work is to understand the PTM crosstalk under each condition analyzed, which helps us to understand the protein regulation or function specifically because of many PTMs in concert, as earlier witnessed \cite{Pengetal2014}.
+Recently, the focus has shifted from identifying peptides/proteins to characterizing PTMs as shown in this recent review article \cite{OlsenMann2013}. However identifying all the PTMs present in the sample is limited both by experimental enrichment techniques that cannot be applied to all kinds of PTMs at once and also from the computational limitations, although there has been an improvement in the latter limitation lately. Some of the future applications of current methodology of identifying PTMs at once is to help understand the PTM crosstalk under each condition analyzed. This in turn helps us to understand the protein regulation or function specifically generally caused by many PTMs acting in concert, as earlier witnessed \cite{Pengetal2014}. So, analysis of PTMs in \emph{tandem} is a necessity to get accurate reflections of the underlying interactions of the PTMs. Previous work in this area used the PTMs deposited in the database, however care must be taken, as these PTMs were identified at different growth phases under differing conditions (cite properly).
 
-Most of the peptide identification search algorithms require a list of PTMs to search for and generally this list is limited to 6. However there are hundreds of PTMs known to date, and well documented in databases like UNIMOD, RESID. So, we used a naive based search algorithm that outputs mass-shifts, instead of the PTMs in the peptide-spectral match. Then we used UNIMOD to identify the PTM that most probably matches the mass-shift. However we did not try and match all the mass-shifts, but investigated in detail the frequent and well known mass-shifts identified by MODa. This resulted in analysis of +1 Da mass-shift (C13 peak detection), oxidation, acetylation, Na and K adducts, along with some widely studied PTMs in phosphorylation, carboxylation and nitrosylation. This program is previously used for similar large-scale analysis with urinary proteomics and they identified novel PTMs. However the study used 2 programs and considered the overlap of PTMs as highly confident. Instead here, our focus is not to identify highly-confident PTMs later used as biomarkers, but to get a wider coverage at a lower FDR of 1\% and look at the time course or evolution of these PTMs during the entire 2 weeks of E. coli growth.
+In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and PTMs associated with it. These search algorithms generall fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations (Cite?). However this limited search identifies only PTMs that were used in the target list, limiting the analysis to either the previously known PTMs or target PTMs. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a naive based multi-blind spectral alignment algorithm, to look for PTMs in our \emph{E. coli} dataset. A few studies that used MODa in the past looked at hand-ful of interesting PTMs in depth such as \cite{Kimetal2014}, or looked at wider coverage of PTMs such as \cite{Liuetal2013}. Our interest is the wider coverage of PTMs and look in depth at both the frequently occuring mass-shifts and the well known PTMs mapped from known mass-shifts. 
 
-N-terminal processing of proteins is a well-known PTM in diverse kinds of species ranging from eukaryotes to bacteria \cite{Kimuraetal2003}. N-terminal acetylation has been shown in the past to provide insights into the nature of the n-terminal of the proteome \cite{Helbigetal2010}. In eukaryotes, n-terminal acetyltransferases are well characterized and studied, for example, as shown in these studies \cite{PolevodaSherman2003}, \cite{PolevodaSherman2003b}. In \emph{E. coli}, NATs are primarily characterized into mainly rim types \cite{Tanakaetal1989}, \cite{Yoshikawaetal1987}
+Most of the peptide identification search algorithms require a list of PTMs to search for and generally this list is limited to 6. However there are hundreds of PTMs known to date, that are identified \emph{in vivo} and well documented in databases like UNIMOD, RESID. Since MODa outputs mass-shifts instead of the PTMs in the peptide-spectral matches, we used UNIMOD to manually map the mass-shift to the appropriate PTM that matches the mass-shift. However we did not try and match all the mass-shifts, but investigated in detail the frequent and well known mass-shifts identified by MODa. This resulted in analysis of +1 Da mass-shift (C13 peak detection), oxidation, acetylation, Na and K adducts, along with some widely studied PTMs such as phosphorylation, carboxylation and nitrosylation. This program is previously used for similar large-scale analysis with urinary proteomics and they identified novel PTMs. However the study used 2 programs and considered the overlap of PTMs as highly confident. Instead here, our focus is not to identify highly-confident PTMs that can be used later as biomarkers, but to get a wider coverage at a lower FDR of 1\% and look at the time course or evolution of these PTMs during the entire 2 weeks of \emph{E. coli} growth.
 
-Protein oxidation by reactive oxygen species (ROS) and reduction of MetSO back to Met is important is linked to various diseases including aging \cite{Stadtman1992}. ROS and RNI seem to accumulate at later stages of growth, because of reasons such as accumulation of toxic substances, nutrient limitation, changes in pH. \emph{E. coli's} internal machinery to tackle this stress comes in many forms at different levels and in this analysis, we are interested at the protein level machinery generally using sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008}. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}. 2 classes of sulfoxide reductases MsrA and yeaA in \emph{E. coli} have been identified that fix MetSO back to Met. Here, we looked at the abundances of these proteins during these late stationary phases, where oxidative stress seems to be more. Sulfoxide reducates to help reduce this oxidative stress. Our earlier work has already shown the induction of these stress proteins at stationary phases for the same data we used here.
+N-terminal processing of proteins is a well-known PTM in diverse kinds of species ranging from eukaryotes to bacteria \cite{Kimuraetal2003}. N-terminal acetylation has been shown in the past to provide insights into the nature of the n-terminal of the proteome \cite{Helbigetal2010}. In eukaryotes, n-terminal acetyltransferases are well characterized and studied, for example, as shown in these studies \cite{PolevodaSherman2003}, \cite{PolevodaSherman2003b}. In \emph{E. coli}, NATs are primarily characterized into mainly rim types \cite{Tanakaetal1989}, \cite{Yoshikawaetal1987}. There is lot of work done on lysine acetylation in \emph{E. coli}, however there are not many n-terminal acetylation sites identified or investigated in detail in the past. Lysine acetylation E. coli, acetylation in exponential and stationary phases \emph{Colin's discussion}. 
 
-One of the PTM networks that is well studied in the past are the phosphorylation signaling cascades\cite{Olsenetal2006}. These are well known signalling mechansims and have been shown to respond quickly to stress during the late-stationary phases \cite{Soaresetal2013}. Our analysis also supports this behavior and would like to emphasize that while the previous paper investigated only 1 PTM, our analysis investigated most of the PTMs in tandem. 
+Protein oxidation by reactive oxygen species (ROS) is important and linked to various diseases including aging \cite{Stadtman1992}. ROS generally seem to accumulate at later stages of growth, because of possible accumulation of toxic substances, nutrient limiting conditions, changes in pH etc. \emph{E. coli's} internal machinery to tackle this oxidative stress comes in many forms at different levels and in this analysis, we were interested at the protein level. \emph{E. coli} has a class of sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008} that fix methionine sulfoxide back to methionine. MsrA and yeaA are the proteins found in this reductase class of enzymes. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}. Here, we looked at the abundances of these proteins during these late stationary phases, where oxidative stress seems to be more. Our earlier work has already shown the induction of these stress proteins at stationary phases using the same mass-spec data set (Cite John's paper).
+
+One of the PTM networks that is well studied in the past is the phosphorylation signaling cascade\cite{Olsenetal2006} (also look for phosphorylation papers that you used in the past at NCBI). These are well known signalling mechansims and have been shown to respond quickly to stress during the late-stationary phases \cite{Soaresetal2013}. Our analysis also supports this behavior and would like to emphasize that while the previous paper investigated only 1 PTM, our analysis investigated most of the PTMs in tandem. 
 
 
 %Choi, Y. W.; Park, S. A.; Lee, H. W.; Kim, D. S.; Lee, N. G. Analysis of growth phase-dependent proteome profiles reveals differential regulation of mRNA and protein in Helicobacter pylori. Proteomics 2008, 8 (13), 2665–2675.
@@ -181,11 +183,11 @@ One of the PTM networks that is well studied in the past are the phosphorylation
 %Directly taken from the above paper for my future analyses: For example, SspA expression increased with decreasing growth rate and was induced by glucose, nitrogen, phosphate, or amino acid starvation. Furthermore, the proteome profiles during the exponential growth phase showed that the expression levels of at least 11 proteins were altered in sspA mutant strains (314). These findings indicate that SspA acts as a transcription factor and is essential for starvation stress-induced tolerance (e.g., stationary phase) in E. coli.
 \emph{Look for PTMs on SspA}
 
-There are some limitations with respect to how we did MODa searches. One of the limitations in the searches performed in the current work is that we used the default mass-range search between -200 and 200 Da (and one other search with -100 and 300 Da range). So, we miss out on larger PTMs i.e., polyubiquitination tails etc. It was shown in the past that looking for multiple PTMs on the same peptide leads to higher false positives. So, we ran our searches looking for only 1 possible modification on the peptide. After the peptides are ID'ed, generally the PTMs are validated by a 2nd round by using programs like Ascore etc. However here, we did not do any 2nd round of validating peptides, as MODa is shown to ID high-confidence PTM identications in its search. We then used MODa output to look at the global level of PTMs, instead of looking at the peptide or at the protein level. We did not do any PTM level quantitation or try to understand the specific PTM stoichiometry, as these require sophisticated experimental instrumentation, protocol and the algorithms to characterize the PTMs associated with proteins. However MODa has been a software suite that has been recently used in both in bacterial proteomics as well as biomedical applications such as urine proteomics \cite{Liuetal2013}.
-
-Most of the times, proteins act in complexes to perform a specific function. In such process, 1 or few amino acids of a protein interact with other residues of another protein, generally through the PTMs. So, analysis of PTMs in \emph{tandem} is a necessity to get accurate reflections of the underlying interactions of the PTMs. Previous work in this area used the PTMs deposited in the database, however care must be taken, as these PTMs were identified at different growth phases under differing conditions.
+There are some limitations with respect to how we did MODa searches. One of the limitations in the searches performed in the current work is that we used the default mass-range search between -200 and 200 Da (and one other search with -100 and 300 Da range). So, we miss out on larger PTMs i.e., polyubiquitination tails etc. Another computational limitation is that we looked for only 1 possible modification on each of the peptides identified. This is because MODa was shown in the past to generate many false positives if searched for multiple PTMs on the same peptide. After the peptides are ID'ed, generally the PTMs are validated by a 2nd round by using programs like Ascore etc. However here, we did not do any 2nd round of validating peptides, as MODa is shown to ID high-confidence PTM identifications in its search. Another, probably important limitation is that we did not do any PTM level quantitation or try to understand the specific PTM stoichiometry, as these require sophisticated experimental instrumentation, good enrichment protocol and the algorithms to characterize the PTMs associated with proteins. However MODa has been a software suite that has been recently used in both in bacterial proteomics as well as biomedical applications such as urinary proteomics to find biomarkers \cite{Liuetal2013}.
 
 Current whole-cell models \cite{Covertetal2008} integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models, but also make reasonable predictions on which genes/enzymes are key for example, for a particular metabolite production etc. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) would improve the protein level abundances and thus will improve the computational predictions.
+
+\emph{http://www.nature.com/ncomms/2014/140725/ncomms5405/full/ncomms5405.html}
 
 \section{Conclusions}
 
@@ -200,11 +202,11 @@ The details of \emph{E. coli} growth is provided in our manuscript that describe
 
 \subsection{Post-translational modification identification and analysis} 
 
-Mass-spectrometry raw data was then converted into mzXML files to input into MODa \cite{Naetal2012}. MODa is a naive based spectral alignment algorithm that identifies peptides and their associated PTMs from the input spectral files. Difference between MODa and most of other search engines is that MODa outputs mass-shifts instead of the post-translational modifications. So, to convert these mass-shifts to known PTMs, we used UNIMOD database. We did a manual mapping of the known PTMs, i.e., if we see +16Da, we most likely know that it is oxidation as evident from UNIMOD. We manually mapped mass-shifts outputted by MODa to those of UNIMOD mappings. So, we limited our focus to the well known PTMs and the frequent mass-shifts obtained from MODa. For example, even though carboxylations and nitrosylations seemed rare (from frequencies of mass-shifts), since we know the mass-shift and the expected amino acids on which this mod happens, we considered that. Likewise, frequently occuring mass-shifts were mapped to NA and K adducts and hence we considered those too in our analysis. We looked at the amino acid profile for each of the mass-shifts considered, to see which amino acid gets modified frequently. These seem to agree well with the literature i.e., oxidation happens on M frequently, when cysteine is capped with carbamidomethylation etc. 
+Mass-spectrometry raw data was then converted into mzXML files to input into MODa \cite{Naetal2012}. MODa is a naive based spectral alignment algorithm that identifies peptides and their associated PTMs from the input spectral files. Difference between MODa and most of other search engines is that MODa outputs mass-shifts instead of directly outputting the post-translational modifications. So, to convert these mass-shifts to known PTMs, we used UNIMOD database. We did a manual mapping of the known PTMs, i.e., if we see +16Da, from UNIMOD we know that it is oxidation. For some mass-shifts, we looked at the amino-acid profiles i.e., which amino acid has the mass-shift frequently to confirm the UNIMOD PTM list i.e., from oxidation profile, it is clear that Met is the  most frequent and from UNIMOD, it is obvious that this corresponds to methionine oxidation. We also looked at well known PTMs that were observed in previous studies in \emph{E. coli}. For example, even though carboxylations and nitrosylations seemed rare (from frequencies of mass-shifts), since we know the mass-shift and the expected amino acids on which this modification happens, we were able to plot the temporal changes. Some frequently occuring mass-shifts did not map to PTMs, but they did map to Na and K adducts, as evident from UNIMOD. In this analysis, we did not consider any mutations. In future, we plan to look at these separately.
 
-We ran separate searches for each of the 9 time points. To speed up the searches, we used UT TACC computing resources. Since there were 3 biological replicates, this resulted in total 27 MODa searches. The enzyme used in the searches is trypsin with fully-tryptic and no proline rule. The missed cleavages allowed are 2. Since the fragmentation technique used is CID, we looked for b/y ions. The mass-tolerance of the precursor is 10ppm, while the mass-tolerance of the product ion is 0.5 Da. We used carbamidomethylation of cysteine as a static or fixed modification. As mentioned earlier, MODa requires a mass range to search for variable modifications, so we tried 2 scenarios: (a) mass range between -200 to 200Da and (b) second search with mass range between -100 to 300Da. We used REL606 sequence library from NCBI sequence database. 
+We ran separate MODa searches for each of the 9 time points. Since there were 3 biological replicates, this resulted in total 27 MODa searches.  To speed up the searches, we used UT TACC computing resources. The enzyme used in the searches is trypsin with fully-tryptic and no proline rule. The missed cleavages allowed are 2. Since the fragmentation technique used is CID, we looked for b/y ions. The mass-tolerance used for the precursor ion is 10 ppm, while the mass-tolerance used for the product ion is 0.5 Da. We set carbamidomethylation of cysteine as a static or fixed modification. As mentioned earlier, MODa requires a mass range to search for variable modifications, so we run MODa searches for 2 scenarios: (1) mass range between -200 to 200Da and (2) second search with mass range between -100 to 300Da. Since we were interested in PTMs, there was no need to include negative mass-shifts, but we included these as mentioned in the MODa protocol. We used REL606 NCBI \emph{E. coli} sequence library. 
 
-To identify high-confidence hits, we used target-decoy approach [citep{EliasGygi2007}]. In this approach, we reverse the original REL sequences and concatenate the reverse sequences to the original sequence database to form a target-decoy database that is twice as much as of the original sequence database. The idea is that there are as many false positive hits to that of the original database as that of the decoy database. We used a 1\% FDR in this approach which is a general norm in mass-spectrometry based proteomics searches.
+Once we have the peptide hits from MODa output, we used target-decoy approach to identify high-confidence hits [citep{EliasGygi2007}]. In this approach, we reverse the original REL sequences and concatenate these to the original sequence database to form a target-decoy database. This database is twice the size of the original sequence database. The idea is that there are as many false positive hits to that of the original database as that of the decoy database. We used a 1\% FDR that is a general norm in mass-spectrometry based proteomics searches.
 
 %To verify if n-term modifications seems to be picked more than c-term, we did not use carbamidomethylation of Cysteine as a static modificaiton.
 
@@ -223,7 +225,7 @@ To identify high-confidence hits, we used target-decoy approach [citep{EliasGygi
 
 \subsection{Raw data and analysis scripts}
 
-All raw data and analysis scripts are available online in the form of a git repository at\\ \texttt{https://github.com/clauswilke/PTMs}.
+All raw data and analysis scripts are available online in the form of a git repository at\\ \texttt{https://github.com/wilkelab/Ecoli\_PTMs}.
 
 %\section{Competing interests}
 %The authors declare that they have no competing interests.
@@ -277,7 +279,7 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank John Houser and 
 \clearpage
 \begin{figure}[p]
 \centerline{\includegraphics[width=8in]{Figures/Ecoli_MsrAB_MODa.pdf}}
-\caption{\label{fig:MsrAB}\textbf{Relative mRNA and protein abundances of methionine sulfoxide reductases MsrA and MsrB.} (A) and (C) mRNA abundances of MsrA and MsrB. The increase of mRNA abundance in stationary phase is not prominent. (B) Protein abundances from 2 different programs seem to agree that MsrA and MsrB are probably fixing methionine sulfoxide to methionine. One of the sites oxidized on MsrA is FQAA[M+16]LAADDDR.}
+\caption{\label{fig:MsrAB}\textbf{Relative protein abundances of methionine sulfoxide reductases MsrA and MsrB.} (A) Protein abundances of MsrA seems to increase going from exponential to long-stationary phase. One of the sites oxidized on MsrA is FQAA[M+16]LAADDDR. (B) MsrB also seems to increase going into the long-stationary phase, protecting \emph{E. coli} from oxidative damage.}
 \end{figure}
 
 \bigskip
@@ -290,7 +292,7 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank John Houser and 
 \clearpage
 \centerline{\includegraphics[width=5in]{Figures/Nitrosylations.pdf}}
 \customlabel{fig:NitrosylationFig}{S2}
-\textbf{Figure S2: E. coli Nitrosylations.} Nitrosylations seem to go down.
+\textbf{Figure S2: E. coli Nitrosylations.} Nitrosylations seem not to change much during the entire growth period.
 
 \clearpage
 \centerline{\includegraphics[width=5in]{Figures/Carboxylations.pdf}}
@@ -300,12 +302,12 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank John Houser and 
 \clearpage
 \centerline{\includegraphics[width=8in]{Figures/NaKAdducts.pdf}}
 \customlabel{fig:CarboxylationFig}{S4}
-\textbf{Figure S4: Na and K adducts.} Na and K adducts seem to happen on all amino acids except those that are basic and carry some charge, as expected.
+\textbf{Figure S4: Na and K adducts.} (A) Na and (B) K adducts seem to happen on all amino acids except histidine, lysine and arginine. H, K and R are amino acids that are basic and carry some (+) charge at physiological pH.
 
 \clearpage
 \centerline{\includegraphics[width=5in]{Figures/1DaProfile.pdf}}
 \customlabel{fig:1DaProfileFig}{S5}
-\textbf{Figure S5: +1Da shift occurs randomly.} We cannot infer that this is deamidation as it occurs randomly on all amino acids, inferring it is mostly 13C peak picking as previously shown in many studies. 
+\textbf{Figure S5: +1Da shift occurs randomly.} We cannot infer that this +1 Dalton mass-shift is deamidation as it occurs randomly on all amino acids, inferring it is carbon-13 (C13) peak picking as previously shown in many studies. 
 
 \clearpage
 \centerline{\includegraphics[width=5in]{Figures/OxidationProfile.pdf}}
@@ -314,8 +316,8 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank John Houser and 
 
 \clearpage
 \centerline{\includegraphics[width=8in]{Figures/Ecoli_MsrAB_MODa_Sequest.pdf}}
-\customlabel{fig:OxidationProfileFig}{S7}
-\textbf{Figure S7: Oxidation is dominant on methionine.} Even though many amino acids could be oxidized, in this data set, oxidation seems to occur primarily on methionine, as expected.
+\customlabel{fig:SequestMODaFig}{S7}
+\textbf{Figure S7: Sequest and MODa results agree.} We compared MODa protein abundance results with Sequest to double-check the protein levels of the sulfoxide reductases that protect \emph{E. coli} from oxidative stress by fixing MetSO to Met. As seen, MODa and Sequest results seem to agree well for (A) MsrA and (B) MsrB.
 
 \clearpage
 \centerline{\includegraphics[width=5in]{Figures/PyroGlutamate.pdf}}
